-class YourHandler(ParsedAtomHandlerInterface, ...
+class YourHandler(AtomHandlerInterface,
-  def receiveParsedAtom(self, atomData, parserMatch):
+  def receiveAtom(self, logAtom):
-    timestamp=parserMatch.getDefaultTimestamp()
+    timestamp=logAtom.getTimestamp()
+    parserMatch=logAtom.parserMatch
-    print '%s' % atomData
+    print '%s' % logAtom.rawData

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Mon, 31 Oct 2016 xx:00:00 +0000

logdata-anomaly-miner (0.0.5) xenial; urgency=low

  Following API changes were introduced:

  * Lower input layers dealing with binary data stream reading,
    splitting into atoms and forwarding data to the parsing model
    were redesigned. Following configuration changes are required
    to adapt "config.py" and probably "analysis.py" to the new
    API:

    * analysisContext.registerComponent(): registerAsRawAtomHandler
      parameter not needed any more, can be removed.

    * SimpleParsingModelRawAtomHandler is not needed any more,
      that part can be replaced by configuration:

  # Now define the AtomizerFactory using the model. A simple line
  # based one is usually sufficient.
    from aminer.input import SimpleByteStreamLineAtomizerFactory
    analysisContext.atomizerFactory=SimpleByteStreamLineAtomizerFactory(
        parsingModel, parsedAtomHandlers, unparsedAtomHandlers,
        anomalyEventHandlers, defaultTimestampPath='/model/syslog/time')

    * SimpleUnparsedAtomHandler was moved from "aminer.events"
      to "aminer.input".

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Mon, 11 Oct 2016 18:00:00 +0000

logdata-anomaly-miner (0.0.4) xenial; urgency=low

  Following API changes were introduced:

  * Event handling (general): Change of EventHandlerInterface
    to include also eventSource as last parameter. See
    /usr/lib/logdata-anomaly-miner/aminer/events/__init__.py

  * VolatileLogarithmicBackoffEventHistory: Added event ID and
    source to stored tuple to allow unique identification of events.